[metadata]
name = audinterface
author = Johannes Wagner, Hagen Wierstorf, Andreas Triantafyllopoulos
author-email = jwagner@audeering.com, wierstorf@audeering.com, atriant@audeering.com
home-page = https://gitlab.audeering.com/tools/audinterface
description = Generic interfaces for signal processing
long-description = file: README.rst, CHANGELOG.rst
license = audEERING
license-file = LICENSE
keywords = dsp, audio, machine learning
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer
    audiofile
    audsp>=0.8.1
    pandas
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audinterface
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
