[metadata]
name = audinterface
author = Johannes Wagner, Hagen Wierstorf, Andreas Triantafyllopoulos
author_email = jwagner@audeering.com, hwierstorf@audeering.com, atriant@audeering.com
url = https://github.com/audeering/audinterface/
project_urls =
    Documentation = https://audeering.github.io/audinterface/
description = Generic interfaces for signal processing
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = dsp, audio, machine learning
platforms= any
classifiers =
	Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audformat >=0.15.3,<2.0.0
    audresample >=1.1.0,<2.0.0
python_requires = >=3.8
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --cov=audinterface
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
